# dominions-utils

./: pyproject.toml
dominions5_server/: config.py  server.py
tests/: test_config.py
tests/resources/: default.yaml
